// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array basic: code 1`] = `
"export default function (Component) {
  Component.__i18n = Component.__i18n || []
  Component.__i18n.push({
    \\"locale\\": \\"\\",
    \\"resource\\": {
      \\"foo\\": [
        [
          (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"bar\\"])};fn.source=\\"bar\\";return fn;})(),
          
        ],
        [
          (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"baz\\"])};fn.source=\\"baz\\";return fn;})(),
          
        ],
        
      ]
    }
  })
}
"
`;

exports[`array basic: map 1`] = `
Object {
  "mappings": ";6EACUA,SAASC",
  "names": Array [
    "bar",
    "baz",
  ],
  "sources": Array [
    "vue-i18n-loader.json",
  ],
  "sourcesContent": Array [
    "{
  \\"foo\\": [[\\"bar\\"], [\\"baz\\"]]
}
",
  ],
  "version": 3,
}
`;

exports[`array mixed: code 1`] = `
"export default function (Component) {
  Component.__i18n = Component.__i18n || []
  Component.__i18n.push({
    \\"locale\\": \\"\\",
    \\"resource\\": {
      \\"foo\\": [
        {
          \\"foo\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"foo\\"])};fn.source=\\"foo\\";return fn;})()
        },
        [
          (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"bar\\"])};fn.source=\\"bar\\";return fn;})(),
          [
            {
              \\"foo\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"foo\\"])};fn.source=\\"foo\\";return fn;})()
            },
            (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"hoge\\"])};fn.source=\\"hoge\\";return fn;})(),
            
          ],
          
        ],
        (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"baz\\"])};fn.source=\\"baz\\";return fn;})(),
        [
          (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"buz\\"])};fn.source=\\"buz\\";return fn;})(),
          
        ]
      ]
    }
  })
}
"
`;

exports[`array mixed: map 1`] = `
Object {
  "mappings": ";;;+EAGYA;;;wEAGPC;;;mFAGWD;;0EAETE;;;sEAGJC;uEACCC",
  "names": Array [
    "foo",
    "bar",
    "hoge",
    "baz",
    "buz",
  ],
  "sources": Array [
    "vue-i18n-loader.json",
  ],
  "sourcesContent": Array [
    "{
  \\"foo\\": [
    {
      \\"foo\\": \\"foo\\"
    },
    [
      \\"bar\\",
      [
        {
          \\"foo\\": \\"foo\\"
        },
        \\"hoge\\"
      ]
    ],
    \\"baz\\",
    [\\"buz\\"]
  ]
}
",
  ],
  "version": 3,
}
`;

exports[`bare: code 1`] = `
"{
  \\"hello\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"hello world!\\"])};fn.source=\\"hello world!\\";return fn;})()
}"
`;

exports[`bare: map 1`] = `
Object {
  "mappings": ";6EACUA",
  "names": Array [
    "hello world!",
  ],
  "sources": Array [
    "vue-i18n-loader.json",
  ],
  "sourcesContent": Array [
    "{
  \\"hello\\": \\"hello world!\\"
}
",
  ],
  "version": 3,
}
`;

exports[`bridge with ESM exporting: code 1`] = `
"export default function (Component) {
  Component.options.__i18n = Component.options.__i18n || []
  Component.options.__i18n.push({
    \\"locale\\": \\"\\",
    \\"resource\\": {
      \\"hi\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"hi there!\\"])};fn.source=\\"hi there!\\";return fn;})(),
      \\"nested\\": {
        \\"hello\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"hello world!\\"])};fn.source=\\"hello world!\\";return fn;})(),
        \\"more\\": {
          \\"plural\\": (()=>{const fn=(ctx) => {const { normalize: _normalize, linked: _linked, interpolate: _interpolate, list: _list, named: _named, plural: _plural } = ctx;return _plural([_normalize([_linked(\\"no apples\\", \\"caml\\")]), _normalize([_interpolate(_list(0)), \\" apple\\"]), _normalize([_interpolate(_named(\\"n\\")), \\" apples\\"])])};fn.source=\\"@.caml:{'no apples'} | {0} apple | {n} apples\\";return fn;})()
        },
        \\"list\\": (()=>{const fn=(ctx) => {const { normalize: _normalize, interpolate: _interpolate, list: _list } = ctx;return _normalize([\\"hi, \\", _interpolate(_list(0)), \\" !\\"])};fn.source=\\"hi, {0} !\\";return fn;})()
      },
      \\"こんにちは\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"こんにちは！\\"])};fn.source=\\"こんにちは！\\";return fn;})(),
      \\"single-quote\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"I don't know!\\"])};fn.source=\\"I don't know!\\";return fn;})(),
      \\"emoji\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"😺\\"])};fn.source=\\"😺\\";return fn;})(),
      \\"unicode\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"A\\"])};fn.source=\\"A\\";return fn;})(),
      \\"unicode-escape\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"\\\\\\\\u0041\\"])};fn.source=\\"\\\\\\\\u0041\\";return fn;})(),
      \\"backslash-single-quote\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"\\\\\\\\'\\"])};fn.source=\\"\\\\\\\\'\\";return fn;})(),
      \\"backslash-backslash\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"\\\\\\\\\\\\\\\\\\"])};fn.source=\\"\\\\\\\\\\\\\\\\\\";return fn;})(),
      \\"errors\\": [
        (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"ERROR1001\\"])};fn.source=\\"ERROR1001\\";return fn;})(),
        (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"ERROR1002\\"])};fn.source=\\"ERROR1002\\";return fn;})(),
        
      ],
      \\"complex\\": {
        \\"warnings\\": [
          (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"NOTE: This is warning\\"])};fn.source=\\"NOTE: This is warning\\";return fn;})(),
          {
            \\"named-waring\\": (()=>{const fn=(ctx) => {const { normalize: _normalize, interpolate: _interpolate, named: _named } = ctx;return _normalize([\\"this is \\", _interpolate(_named(\\"type\\")), \\" warining\\"])};fn.source=\\"this is {type} warining\\";return fn;})()
          }
        ]
      }
    }
  })
  Component.options.__i18nBridge = Component.options.__i18nBridge || []
  Component.options.__i18nBridge.push('{
  \\"hi\\": \\"hi there!\\",
  \\"nested\\": {
    \\"hello\\": \\"hello world!\\",
    \\"more\\": {
      \\"plural\\": \\"@.caml:{\\\\u0027no apples\\\\u0027} | {0} apple | {n} apples\\"
    },
    \\"list\\": \\"hi, {0} !\\"
  },
  \\"こんにちは\\": \\"こんにちは！\\",
  \\"single-quote\\": \\"I don\\\\u0027t know!\\",
  \\"emoji\\": \\"😺\\",
  \\"unicode\\": \\"\\\\\\\\u0041\\",
  \\"unicode-escape\\": \\"\\\\\\\\\\\\\\\\u0041\\",
  \\"backslash-single-quote\\": \\"\\\\\\\\\\\\\\\\\\\\u0027\\",
  \\"backslash-backslash\\": \\"\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\",
  \\"errors\\": [\\"ERROR1001\\", \\"ERROR1002\\"],
  \\"complex\\": {
    \\"warnings\\": [
      \\"NOTE: This is warning\\",
      {
        \\"named-waring\\": \\"this is {type} warining\\"
      }
    ]
  }
}
')
  delete Component.options._Ctor
  
}
"
`;

exports[`bridge with ESM exporting: map 1`] = `
Object {
  "mappings": ";0EACOA;;+EAEKC;;4LAEGC,aAAAC,uBAAAC,wBAAAC,wBAAAC,2BAAAC;;sHAEJC,QAAAJ,wBAAAK;;6EAEDC;oFACOC;6EACPC;+EACEC;sFACOC;8FACQC;2FACHC;+EACZC,aAAaC;;;wEAGpBC;;oIAEkBC,YAAAC,8BAAAC",
  "names": Array [
    "hi there!",
    "hello world!",
    "no apples",
    "caml",
    "0",
    " apple",
    "n",
    " apples",
    "hi, ",
    " !",
    "こんにちは！",
    "I don't know!",
    "😺",
    "A",
    "\\\\u0041",
    "\\\\'",
    "\\\\\\\\",
    "ERROR1001",
    "ERROR1002",
    "NOTE: This is warning",
    "this is ",
    "type",
    " warining",
  ],
  "sources": Array [
    "vue-i18n-loader.json",
  ],
  "sourcesContent": Array [
    "{
  \\"hi\\": \\"hi there!\\",
  \\"nested\\": {
    \\"hello\\": \\"hello world!\\",
    \\"more\\": {
      \\"plural\\": \\"@.caml:{'no apples'} | {0} apple | {n} apples\\"
    },
    \\"list\\": \\"hi, {0} !\\"
  },
  \\"こんにちは\\": \\"こんにちは！\\",
  \\"single-quote\\": \\"I don't know!\\",
  \\"emoji\\": \\"😺\\",
  \\"unicode\\": \\"\\\\u0041\\",
  \\"unicode-escape\\": \\"\\\\\\\\u0041\\",
  \\"backslash-single-quote\\": \\"\\\\\\\\'\\",
  \\"backslash-backslash\\": \\"\\\\\\\\\\\\\\\\\\",
  \\"errors\\": [\\"ERROR1001\\", \\"ERROR1002\\"],
  \\"complex\\": {
    \\"warnings\\": [
      \\"NOTE: This is warning\\",
      {
        \\"named-waring\\": \\"this is {type} warining\\"
      }
    ]
  }
}
",
  ],
  "version": 3,
}
`;

exports[`bridge: code 1`] = `
"module.exports = function (Component) {
  Component.options.__i18n = Component.options.__i18n || []
  Component.options.__i18n.push({
    \\"locale\\": \\"\\",
    \\"resource\\": {
      \\"hi\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"hi there!\\"])};fn.source=\\"hi there!\\";return fn;})(),
      \\"nested\\": {
        \\"hello\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"hello world!\\"])};fn.source=\\"hello world!\\";return fn;})(),
        \\"more\\": {
          \\"plural\\": (()=>{const fn=(ctx) => {const { normalize: _normalize, linked: _linked, interpolate: _interpolate, list: _list, named: _named, plural: _plural } = ctx;return _plural([_normalize([_linked(\\"no apples\\", \\"caml\\")]), _normalize([_interpolate(_list(0)), \\" apple\\"]), _normalize([_interpolate(_named(\\"n\\")), \\" apples\\"])])};fn.source=\\"@.caml:{'no apples'} | {0} apple | {n} apples\\";return fn;})()
        },
        \\"list\\": (()=>{const fn=(ctx) => {const { normalize: _normalize, interpolate: _interpolate, list: _list } = ctx;return _normalize([\\"hi, \\", _interpolate(_list(0)), \\" !\\"])};fn.source=\\"hi, {0} !\\";return fn;})()
      },
      \\"こんにちは\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"こんにちは！\\"])};fn.source=\\"こんにちは！\\";return fn;})(),
      \\"single-quote\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"I don't know!\\"])};fn.source=\\"I don't know!\\";return fn;})(),
      \\"emoji\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"😺\\"])};fn.source=\\"😺\\";return fn;})(),
      \\"unicode\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"A\\"])};fn.source=\\"A\\";return fn;})(),
      \\"unicode-escape\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"\\\\\\\\u0041\\"])};fn.source=\\"\\\\\\\\u0041\\";return fn;})(),
      \\"backslash-single-quote\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"\\\\\\\\'\\"])};fn.source=\\"\\\\\\\\'\\";return fn;})(),
      \\"backslash-backslash\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"\\\\\\\\\\\\\\\\\\"])};fn.source=\\"\\\\\\\\\\\\\\\\\\";return fn;})(),
      \\"errors\\": [
        (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"ERROR1001\\"])};fn.source=\\"ERROR1001\\";return fn;})(),
        (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"ERROR1002\\"])};fn.source=\\"ERROR1002\\";return fn;})(),
        
      ],
      \\"complex\\": {
        \\"warnings\\": [
          (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"NOTE: This is warning\\"])};fn.source=\\"NOTE: This is warning\\";return fn;})(),
          {
            \\"named-waring\\": (()=>{const fn=(ctx) => {const { normalize: _normalize, interpolate: _interpolate, named: _named } = ctx;return _normalize([\\"this is \\", _interpolate(_named(\\"type\\")), \\" warining\\"])};fn.source=\\"this is {type} warining\\";return fn;})()
          }
        ]
      }
    }
  })
  Component.options.__i18nBridge = Component.options.__i18nBridge || []
  Component.options.__i18nBridge.push('{
  \\"hi\\": \\"hi there!\\",
  \\"nested\\": {
    \\"hello\\": \\"hello world!\\",
    \\"more\\": {
      \\"plural\\": \\"@.caml:{\\\\u0027no apples\\\\u0027} | {0} apple | {n} apples\\"
    },
    \\"list\\": \\"hi, {0} !\\"
  },
  \\"こんにちは\\": \\"こんにちは！\\",
  \\"single-quote\\": \\"I don\\\\u0027t know!\\",
  \\"emoji\\": \\"😺\\",
  \\"unicode\\": \\"\\\\\\\\u0041\\",
  \\"unicode-escape\\": \\"\\\\\\\\\\\\\\\\u0041\\",
  \\"backslash-single-quote\\": \\"\\\\\\\\\\\\\\\\\\\\u0027\\",
  \\"backslash-backslash\\": \\"\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\",
  \\"errors\\": [\\"ERROR1001\\", \\"ERROR1002\\"],
  \\"complex\\": {
    \\"warnings\\": [
      \\"NOTE: This is warning\\",
      {
        \\"named-waring\\": \\"this is {type} warining\\"
      }
    ]
  }
}
')
  delete Component.options._Ctor
  
}
"
`;

exports[`bridge: map 1`] = `
Object {
  "mappings": ";0EACOA;;+EAEKC;;4LAEGC,aAAAC,uBAAAC,wBAAAC,wBAAAC,2BAAAC;;sHAEJC,QAAAJ,wBAAAK;;6EAEDC;oFACOC;6EACPC;+EACEC;sFACOC;8FACQC;2FACHC;+EACZC,aAAaC;;;wEAGpBC;;oIAEkBC,YAAAC,8BAAAC",
  "names": Array [
    "hi there!",
    "hello world!",
    "no apples",
    "caml",
    "0",
    " apple",
    "n",
    " apples",
    "hi, ",
    " !",
    "こんにちは！",
    "I don't know!",
    "😺",
    "A",
    "\\\\u0041",
    "\\\\'",
    "\\\\\\\\",
    "ERROR1001",
    "ERROR1002",
    "NOTE: This is warning",
    "this is ",
    "type",
    " warining",
  ],
  "sources": Array [
    "vue-i18n-loader.json",
  ],
  "sourcesContent": Array [
    "{
  \\"hi\\": \\"hi there!\\",
  \\"nested\\": {
    \\"hello\\": \\"hello world!\\",
    \\"more\\": {
      \\"plural\\": \\"@.caml:{'no apples'} | {0} apple | {n} apples\\"
    },
    \\"list\\": \\"hi, {0} !\\"
  },
  \\"こんにちは\\": \\"こんにちは！\\",
  \\"single-quote\\": \\"I don't know!\\",
  \\"emoji\\": \\"😺\\",
  \\"unicode\\": \\"\\\\u0041\\",
  \\"unicode-escape\\": \\"\\\\\\\\u0041\\",
  \\"backslash-single-quote\\": \\"\\\\\\\\'\\",
  \\"backslash-backslash\\": \\"\\\\\\\\\\\\\\\\\\",
  \\"errors\\": [\\"ERROR1001\\", \\"ERROR1002\\"],
  \\"complex\\": {
    \\"warnings\\": [
      \\"NOTE: This is warning\\",
      {
        \\"named-waring\\": \\"this is {type} warining\\"
      }
    ]
  }
}
",
  ],
  "version": 3,
}
`;

exports[`complex: code 1`] = `
"export default {
  \\"hi\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"hi there!\\"])};fn.source=\\"hi there!\\";return fn;})(),
  \\"nested\\": {
    \\"hello\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"hello world!\\"])};fn.source=\\"hello world!\\";return fn;})(),
    \\"more\\": {
      \\"plural\\": (()=>{const fn=(ctx) => {const { normalize: _normalize, linked: _linked, interpolate: _interpolate, list: _list, named: _named, plural: _plural } = ctx;return _plural([_normalize([_linked(\\"no apples\\", \\"caml\\")]), _normalize([_interpolate(_list(0)), \\" apple\\"]), _normalize([_interpolate(_named(\\"n\\")), \\" apples\\"])])};fn.source=\\"@.caml:{'no apples'} | {0} apple | {n} apples\\";return fn;})()
    },
    \\"list\\": (()=>{const fn=(ctx) => {const { normalize: _normalize, interpolate: _interpolate, list: _list } = ctx;return _normalize([\\"hi, \\", _interpolate(_list(0)), \\" !\\"])};fn.source=\\"hi, {0} !\\";return fn;})()
  },
  \\"こんにちは\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"こんにちは！\\"])};fn.source=\\"こんにちは！\\";return fn;})(),
  \\"single-quote\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"I don't know!\\"])};fn.source=\\"I don't know!\\";return fn;})(),
  \\"emoji\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"😺\\"])};fn.source=\\"😺\\";return fn;})(),
  \\"unicode\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"A\\"])};fn.source=\\"A\\";return fn;})(),
  \\"unicode-escape\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"\\\\\\\\u0041\\"])};fn.source=\\"\\\\\\\\u0041\\";return fn;})(),
  \\"backslash-single-quote\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"\\\\\\\\'\\"])};fn.source=\\"\\\\\\\\'\\";return fn;})(),
  \\"backslash-backslash\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"\\\\\\\\\\\\\\\\\\"])};fn.source=\\"\\\\\\\\\\\\\\\\\\";return fn;})(),
  \\"errors\\": [
    (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"ERROR1001\\"])};fn.source=\\"ERROR1001\\";return fn;})(),
    (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"ERROR1002\\"])};fn.source=\\"ERROR1002\\";return fn;})(),
    
  ],
  \\"complex\\": {
    \\"warnings\\": [
      (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"NOTE: This is warning\\"])};fn.source=\\"NOTE: This is warning\\";return fn;})(),
      {
        \\"named-waring\\": (()=>{const fn=(ctx) => {const { normalize: _normalize, interpolate: _interpolate, named: _named } = ctx;return _normalize([\\"this is \\", _interpolate(_named(\\"type\\")), \\" warining\\"])};fn.source=\\"this is {type} warining\\";return fn;})()
      }
    ]
  }
}"
`;

exports[`complex: map 1`] = `
Object {
  "mappings": ";0EACOA;;+EAEKC;;4LAEGC,aAAAC,uBAAAC,wBAAAC,wBAAAC,2BAAAC;;sHAEJC,QAAAJ,wBAAAK;;6EAEDC;oFACOC;6EACPC;+EACEC;sFACOC;8FACQC;2FACHC;+EACZC,aAAaC;;;wEAGpBC;;oIAEkBC,YAAAC,8BAAAC",
  "names": Array [
    "hi there!",
    "hello world!",
    "no apples",
    "caml",
    "0",
    " apple",
    "n",
    " apples",
    "hi, ",
    " !",
    "こんにちは！",
    "I don't know!",
    "😺",
    "A",
    "\\\\u0041",
    "\\\\'",
    "\\\\\\\\",
    "ERROR1001",
    "ERROR1002",
    "NOTE: This is warning",
    "this is ",
    "type",
    " warining",
  ],
  "sources": Array [
    "vue-i18n-loader.json",
  ],
  "sourcesContent": Array [
    "{
  \\"hi\\": \\"hi there!\\",
  \\"nested\\": {
    \\"hello\\": \\"hello world!\\",
    \\"more\\": {
      \\"plural\\": \\"@.caml:{'no apples'} | {0} apple | {n} apples\\"
    },
    \\"list\\": \\"hi, {0} !\\"
  },
  \\"こんにちは\\": \\"こんにちは！\\",
  \\"single-quote\\": \\"I don't know!\\",
  \\"emoji\\": \\"😺\\",
  \\"unicode\\": \\"\\\\u0041\\",
  \\"unicode-escape\\": \\"\\\\\\\\u0041\\",
  \\"backslash-single-quote\\": \\"\\\\\\\\'\\",
  \\"backslash-backslash\\": \\"\\\\\\\\\\\\\\\\\\",
  \\"errors\\": [\\"ERROR1001\\", \\"ERROR1002\\"],
  \\"complex\\": {
    \\"warnings\\": [
      \\"NOTE: This is warning\\",
      {
        \\"named-waring\\": \\"this is {type} warining\\"
      }
    ]
  }
}
",
  ],
  "version": 3,
}
`;

exports[`force stringify: code 1`] = `
"export default {
  \\"trueValue\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"true\\"])};fn.source=\\"true\\";return fn;})(),
  \\"falseValue\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"false\\"])};fn.source=\\"false\\";return fn;})(),
  \\"nullValue\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"null\\"])};fn.source=\\"null\\";return fn;})(),
  \\"numberValue\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"1\\"])};fn.source=\\"1\\";return fn;})()
}"
`;

exports[`force stringify: map 1`] = `
Object {
  "mappings": ";iFACcA;kFACCC;iFACDC;mFACEC",
  "names": Array [
    "true",
    "false",
    "null",
    "1",
  ],
  "sources": Array [
    "vue-i18n-loader.json",
  ],
  "sourcesContent": Array [
    "{
  \\"trueValue\\": true,
  \\"falseValue\\": false,
  \\"nullValue\\": null,
  \\"numberValue\\": 1
}
",
  ],
  "version": 3,
}
`;

exports[`invalid message syntax: code 1`] = `
"{
  \\"hello\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"こんにちは\\"])};fn.source=\\"こんにちは\\";return fn;})(),
  \\"this-is-ivalid\\": @
}"
`;

exports[`invalid message syntax: errors 1`] = `
Array [
  Object {
    "code": 14,
    "domain": "parser",
    "location": Object {
      "end": Object {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "msg": "Unexpected lexical analysis in token: 'EOF'",
    "source": "@",
  },
  Object {
    "code": 13,
    "domain": "parser",
    "location": Object {
      "end": Object {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": Object {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
    },
    "msg": "Unexpected empty linked key",
    "source": "@",
  },
]
`;

exports[`invalid message syntax: map 1`] = `
Object {
  "mappings": ";6EACUA;+GACSC",
  "names": Array [
    "こんにちは",
    "",
  ],
  "sources": Array [
    "vue-i18n-loader.json",
  ],
  "sourcesContent": Array [
    "{
  \\"hello\\": \\"こんにちは\\",
  \\"this-is-ivalid\\": \\"@\\"
}
",
  ],
  "version": 3,
}
`;

exports[`simple: code 1`] = `
"export default {
  \\"hi\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"hi there!\\"])};fn.source=\\"hi there!\\";return fn;})(),
  \\"hello\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"hello world!\\"])};fn.source=\\"hello world!\\";return fn;})(),
  \\"named\\": (()=>{const fn=(ctx) => {const { normalize: _normalize, interpolate: _interpolate, named: _named } = ctx;return _normalize([\\"hi, \\", _interpolate(_named(\\"name\\")), \\" !\\"])};fn.source=\\"hi, {name} !\\";return fn;})(),
  \\"list\\": (()=>{const fn=(ctx) => {const { normalize: _normalize, interpolate: _interpolate, list: _list } = ctx;return _normalize([\\"hi, \\", _interpolate(_list(0)), \\" !\\"])};fn.source=\\"hi, {0} !\\";return fn;})(),
  \\"literal\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"hi, \\", \\"kazupon\\", \\" !\\"])};fn.source=\\"hi, {  'kazupon'  } !\\";return fn;})(),
  \\"linked\\": (()=>{const fn=(ctx) => {const { normalize: _normalize, linked: _linked } = ctx;return _normalize([\\"hi, \\", _linked(\\"name\\"), \\" !\\"])};fn.source=\\"hi, @:name !\\";return fn;})(),
  \\"plural\\": (()=>{const fn=(ctx) => {const { normalize: _normalize, linked: _linked, interpolate: _interpolate, list: _list, named: _named, plural: _plural } = ctx;return _plural([_normalize([_linked(\\"no apples\\", \\"caml\\")]), _normalize([_interpolate(_list(0)), \\" apple\\"]), _normalize([_interpolate(_named(\\"n\\")), \\" apples\\"])])};fn.source=\\"@.caml:{'no apples'} | {0} apple | {n} apples\\";return fn;})()
}"
`;

exports[`simple: map 1`] = `
Object {
  "mappings": ";0EACOA;6EACGC;uHACAC,QAAAC,8BAAAC;oHACDF,QAAAG,wBAAAD;+EACGF,QAAAI,WAAAF;+FACDF,gBAAAC,SAAAC;wLACAG,aAAAC,uBAAAH,wBAAAI,wBAAAC,2BAAAC",
  "names": Array [
    "hi there!",
    "hello world!",
    "hi, ",
    "name",
    " !",
    "0",
    "kazupon",
    "no apples",
    "caml",
    " apple",
    "n",
    " apples",
  ],
  "sources": Array [
    "vue-i18n-loader.json",
  ],
  "sourcesContent": Array [
    "{
  \\"hi\\": \\"hi there!\\",
  \\"hello\\": \\"hello world!\\",
  \\"named\\": \\"hi, {name} !\\",
  \\"list\\": \\"hi, {0} !\\",
  \\"literal\\": \\"hi, {  'kazupon'  } !\\",
  \\"linked\\": \\"hi, @:name !\\",
  \\"plural\\": \\"@.caml:{'no apples'} | {0} apple | {n} apples\\"
}
",
  ],
  "version": 3,
}
`;

exports[`unhandling: code 1`] = `
"export default {
  \\"trueValue\\": true,
  \\"falseValue\\": false,
  \\"nullValue\\": null,
  \\"numberValue\\": 1
}"
`;

exports[`unhandling: map 1`] = `
Object {
  "mappings": "",
  "names": Array [],
  "sources": Array [],
  "version": 3,
}
`;

exports[`useClassComponent: code 1`] = `
"export default function (Component) {
  Component.__o.__i18n = Component.__o.__i18n || []
  Component.__o.__i18n.push({
    \\"locale\\": \\"\\",
    \\"resource\\": {
      \\"hi\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"hi there!\\"])};fn.source=\\"hi there!\\";return fn;})(),
      \\"nested\\": {
        \\"hello\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"hello world!\\"])};fn.source=\\"hello world!\\";return fn;})(),
        \\"more\\": {
          \\"plural\\": (()=>{const fn=(ctx) => {const { normalize: _normalize, linked: _linked, interpolate: _interpolate, list: _list, named: _named, plural: _plural } = ctx;return _plural([_normalize([_linked(\\"no apples\\", \\"caml\\")]), _normalize([_interpolate(_list(0)), \\" apple\\"]), _normalize([_interpolate(_named(\\"n\\")), \\" apples\\"])])};fn.source=\\"@.caml:{'no apples'} | {0} apple | {n} apples\\";return fn;})()
        },
        \\"list\\": (()=>{const fn=(ctx) => {const { normalize: _normalize, interpolate: _interpolate, list: _list } = ctx;return _normalize([\\"hi, \\", _interpolate(_list(0)), \\" !\\"])};fn.source=\\"hi, {0} !\\";return fn;})()
      },
      \\"こんにちは\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"こんにちは！\\"])};fn.source=\\"こんにちは！\\";return fn;})(),
      \\"single-quote\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"I don't know!\\"])};fn.source=\\"I don't know!\\";return fn;})(),
      \\"emoji\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"😺\\"])};fn.source=\\"😺\\";return fn;})(),
      \\"unicode\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"A\\"])};fn.source=\\"A\\";return fn;})(),
      \\"unicode-escape\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"\\\\\\\\u0041\\"])};fn.source=\\"\\\\\\\\u0041\\";return fn;})(),
      \\"backslash-single-quote\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"\\\\\\\\'\\"])};fn.source=\\"\\\\\\\\'\\";return fn;})(),
      \\"backslash-backslash\\": (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"\\\\\\\\\\\\\\\\\\"])};fn.source=\\"\\\\\\\\\\\\\\\\\\";return fn;})(),
      \\"errors\\": [
        (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"ERROR1001\\"])};fn.source=\\"ERROR1001\\";return fn;})(),
        (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"ERROR1002\\"])};fn.source=\\"ERROR1002\\";return fn;})(),
        
      ],
      \\"complex\\": {
        \\"warnings\\": [
          (()=>{const fn=(ctx) => {const { normalize: _normalize } = ctx;return _normalize([\\"NOTE: This is warning\\"])};fn.source=\\"NOTE: This is warning\\";return fn;})(),
          {
            \\"named-waring\\": (()=>{const fn=(ctx) => {const { normalize: _normalize, interpolate: _interpolate, named: _named } = ctx;return _normalize([\\"this is \\", _interpolate(_named(\\"type\\")), \\" warining\\"])};fn.source=\\"this is {type} warining\\";return fn;})()
          }
        ]
      }
    }
  })
}
"
`;

exports[`useClassComponent: map 1`] = `
Object {
  "mappings": ";0EACOA;;+EAEKC;;4LAEGC,aAAAC,uBAAAC,wBAAAC,wBAAAC,2BAAAC;;sHAEJC,QAAAJ,wBAAAK;;6EAEDC;oFACOC;6EACPC;+EACEC;sFACOC;8FACQC;2FACHC;+EACZC,aAAaC;;;wEAGpBC;;oIAEkBC,YAAAC,8BAAAC",
  "names": Array [
    "hi there!",
    "hello world!",
    "no apples",
    "caml",
    "0",
    " apple",
    "n",
    " apples",
    "hi, ",
    " !",
    "こんにちは！",
    "I don't know!",
    "😺",
    "A",
    "\\\\u0041",
    "\\\\'",
    "\\\\\\\\",
    "ERROR1001",
    "ERROR1002",
    "NOTE: This is warning",
    "this is ",
    "type",
    " warining",
  ],
  "sources": Array [
    "vue-i18n-loader.json",
  ],
  "sourcesContent": Array [
    "{
  \\"hi\\": \\"hi there!\\",
  \\"nested\\": {
    \\"hello\\": \\"hello world!\\",
    \\"more\\": {
      \\"plural\\": \\"@.caml:{'no apples'} | {0} apple | {n} apples\\"
    },
    \\"list\\": \\"hi, {0} !\\"
  },
  \\"こんにちは\\": \\"こんにちは！\\",
  \\"single-quote\\": \\"I don't know!\\",
  \\"emoji\\": \\"😺\\",
  \\"unicode\\": \\"\\\\u0041\\",
  \\"unicode-escape\\": \\"\\\\\\\\u0041\\",
  \\"backslash-single-quote\\": \\"\\\\\\\\'\\",
  \\"backslash-backslash\\": \\"\\\\\\\\\\\\\\\\\\",
  \\"errors\\": [\\"ERROR1001\\", \\"ERROR1002\\"],
  \\"complex\\": {
    \\"warnings\\": [
      \\"NOTE: This is warning\\",
      {
        \\"named-waring\\": \\"this is {type} warining\\"
      }
    ]
  }
}
",
  ],
  "version": 3,
}
`;
